Padding issue on smaller screens

--- a/css/custom1.css
+++ b/css/custom1.css
@@ -331,3 +331,8 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+	.site-wrapper {
+		padding-top:250px;
+	}
+}
